# motion_primitives

./: .gitignore  CMakeLists.txt  README.md  alternative_setup.py  deps_https.repos  deps_ssh.repos  external.repos  min_dispersion_primitives.py  mp_graph_search.py  package.xml  requirements.txt  setup.py
.github/workflows/: cpplint-reviewdog.yaml  python-app.yml  ros_cpp.yml
cmake/: FindTBB.cmake
include/motion_primitives/: graph_search.h  graph_search2.h  motion_primitive_graph.h  utils.h
launch/: bagging.launch  cpp_action_server.launch  cpp_planner.launch  cpp_planner.rviz  octomap.launch
motion_primitives_py/: __init__.py  c_output_redirector.py  euclidean_motion_primitive.py  graph_search_test.py  inputs_motion_primitive.py  jerks_motion_primitive.py  min_dispersion_primitives_lattice.py  motion_primitive.py  motion_primitive_graph.py  motion_primitive_lattice.py  motion_primitive_tree.py  mp_graph_search.py  occupancy_map.py  optimization_motion_primitive.py  polynomial_motion_primitive.py  reduce_graph_degree.py  reeds_shepp_motion_primitive.py  requirements.txt
motion_primitives_py/examples/: 1_vs_9.py  compare_3_dispersions.py  compare_graphs.py  compare_lattice_vs_tree_dispersion.py  compare_lattics_vs_tree_dispersion.py  compute_dispersion.py  dispersion_example.py  generate_lattices_of_decreasing_d.py  graph_search_on_random_maps.py  infinite.py  lattice_animation.py  plot_degree_vs_dispersion.py
motion_primitives_py/motion_primitive_types/: eth_motion_primitive.py  motion_primitive.py  optimization_motion_primitive.py  polynomial_motion_primitive.py  ruckig_motion_primitive.py
motion_primitives_py/motion_primitives_py/: __init__.py  motion_primitive_graph.py  motion_primitive_lattice.py  occupancy_map.py
pickle/: MotionPrimitive.pkl  MotionPrimitive_backup.pkl  MotionPrimitive_backup_2.pkl  MotionPrimitive_q2_dim2_numu5_num_deriv_pts5.pkl
scripts/: debug_trajectory.py  min_dispersion_primitives.py  min_dispersion_primitives_lattice.py  min_dispersion_primitives_tree.py  motion_primitive.py  motion_primitive_graph.py  mp_graph_search.py  octomap_listener.py  planning_node.py  planning_server.py
src/: graph_search.cpp  graph_search2.cpp  graph_search_action_server.cpp  graph_search_node.cpp  motion_primitive_graph.cpp  python.cpp  search.cpp  utils.cpp
tests/: CMakeLists.txt  complex_test.json  test_graph_search.cpp  test_motion_primitive.cpp  test_motion_primitive_graph.cpp
(+24 files in other folders)
